@@ -1,4 +1,4 @@
-$Id: HISTORY,v 1.1635.2.4 2008-01-18 19:12:21 debug Exp $
+$Id: HISTORY,v 1.1635.2.5 2008-02-24 05:43:17 debug Exp $
 
 Changelog for GXemul:
 ---------------------
@@ -3689,3 +3689,10 @@ Changelog for GXemul:
 
 ==============  RELEASE 0.4.6.2  ==============
 
+20080120	Some minor OpenFirmware fixes: Adding a "memory" property to
+		"/chosen", adding a dummy claim() service.
+20080205	Switching order of DINCLUDE and XINCLUDE in
+		src/devices/Makefile (thanks to Ning Zhao for the tip).
+20080222	Adding a DEV_DISK_OFFSET_HIGH32 register, for reading/writing
+		the top 32 bits of the offset register (useful for emulated
+		32-bit archs), as suggested by Julian Elischer.
